--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-dom": "^16.14.0",
     "react-github-btn": "^1.2.0",
     "react-helmet": "^6.1.0",
+    "react-responsive-carousel": "^3.2.18",
     "react-reveal": "^1.2.2",
     "react-scroll": "^1.7.16",
     "react-tilt": "^0.1.4"
