--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "gatsby-transformer-sharp": "^2.5.5",
     "gsap": "^3.6.1",
     "nanoid": "^3.1.10",
-    "node-sass": "^4.14.1",
+    "@parcel/transformer-sass": "^2.10.3",
+    "parcel": "^2.10.3",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-bootstrap": "^1.0.1",
