--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "react-helmet": "^6.1.0",
     "react-responsive-carousel": "^3.2.18",
     "react-scroll": "^1.7.16",
-    "react-tilt": "^1.0.2"
+    "react-tilt": "^1.0.2",
+    "tagcloud": "^1.1.0-1"
   },
   "devDependencies": {
     "babel-eslint": "^10.1.0",
