--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-responsive-carousel": "^3.2.18",
     "react-scroll": "^1.7.16",
     "react-tilt": "^1.0.2",
+    "react-youtube": "^10.1.0",
     "tagcloud": "^1.1.0-1"
   },
   "devDependencies": {
