--- a/src/mock/project_data/projects.json
+++ b/src/mock/project_data/projects.json
@@ -55,5 +55,17 @@
     "icons": [
       { "src": "cpp-logo.png", "label": "C++" }
     ]
+  },
+
+
+  {
+    "title": "Omnisight",
+    "description": "",
+    "imageUrl": "https://static.wixstatic.com/media/8b18de_16995d58efd64344bafd16985b2e7b7e~mv2.png/v1/crop/x_203,y_57,w_1027,h_669/fill/w_722,h_471,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/8b18de_16995d58efd64344bafd16985b2e7b7e~mv2.png%22",
+    "liveUrl": "https://www.robotto.ai/omnisight",
+    "sourceUrl": "",
+    "icons": [
+      { "src": "cpp-logo.png", "label": "C++" }
+    ]
   }
 ]
